--- a/m3/demo1/1.1/Jenkinsfile
+++ b/m3/demo1/1.1/Jenkinsfile
@@ -22,12 +22,14 @@ pipeline {
             }
         }
         stage('Unit Test') {
-            dir('./m3/src') {
-                sh '''
-                    dotnet test --logger "trx;LogFileName=Pi.Math.trx" Pi.Math.Tests/Pi.Math.Tests.csproj
-                    dotnet test --logger "trx;LogFileName=Pi.Runtime.trx" Pi.Runtime.Tests/Pi.Runtime.Tests.csproj
-                '''
-                mstest testResultsFile:"**/*.trx", keepLongStdio: true
+            steps {
+                dir('./m3/src') {
+                    sh '''
+                        dotnet test --logger "trx;LogFileName=Pi.Math.trx" Pi.Math.Tests/Pi.Math.Tests.csproj
+                        dotnet test --logger "trx;LogFileName=Pi.Runtime.trx" Pi.Runtime.Tests/Pi.Runtime.Tests.csproj
+                    '''
+                    mstest testResultsFile:"**/*.trx", keepLongStdio: true
+                }
             }
         }
         stage('Smoke Test') {
