fixed pipeline typo

--- a/m3/demo1/1.2/Jenkinsfile
+++ b/m3/demo1/1.2/Jenkinsfile
@@ -1,4 +1,4 @@
-pipline {
+pipeline {
     agent any
     parameters {
         booleanParam(name: 'RC', defaultValue: false, description: 'Is this a Release Candidate?')
