--- a/m3/demo1/1.2/Jenkinsfile
+++ b/m3/demo1/1.2/Jenkinsfile
@@ -49,6 +49,7 @@ pipeline {
             }
             steps {
                 sh 'dotnet publish -p:VersionPrefix="${VERSION}" --version-suffix "${VERSION_RC}" ./m3/src/Pi.Web/Pi.Web.csproj -o ./out'
+                archiveArtifacts('out/')
             }
         }
     }
