--- a/m3/demo1/1.3/Jenkinsfile
+++ b/m3/demo1/1.3/Jenkinsfile
@@ -22,9 +22,31 @@ pipeline {
                 sh 'dotnet build '
             }
         }
-        stage('Unit Test') {}
-        stage('Smoke Test') {}
-        stage('Publish') {}
+        stage('Unit Test') {
+            steps {
+                dir('./m3/src') {
+                    sh '''
+                        dotnet test --logger "trx;LogFileName=Pi.Math.trx" Pi.Math.Tests/Pi.Math.Tests.csproj
+                        dotnet test --logger "trx;LogFileName=Pi.Runtime.trx" Pi.Runtime.Tests/Pi.Runtime.Tests.csproj
+                    '''
+                    mstest testResultsFile:"**/*.trx", keepLongStdio: true
+                }
+            }
+        }
+        stage('Smoke Test') {
+            steps {
+                sh 'dotnet ./m3/src/Pi.Web/bin/Debug/notecoreapp3.1/Pi.Web.dll'
+            }
+        }
+        stage('Publish') {
+            when {
+                expression { return params.RC }
+            }
+            steps {
+                sh 'dotnet publish -p:VersionPrefix=${VERSION} --version-suffix "${VERSION_RC}" ./m3/src/Pi.Web.csproj -o ./out'
+                archiveArtifacts('out/')
+            }
+        }
     }
 }
 
