--- a/m3/demo1/1.3/Jenkinsfile
+++ b/m3/demo1/1.3/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     parameters {
-        booleanParams(name: 'RC', defaultValue: false, description: 'Is this a Release Candidate?')
+        booleanParam(name: 'RC', defaultValue: false, description: 'Is this a Release Candidate?')
     }
     environment {
         VERSION = "0.1.0"
