--- a/m3/demo1/1.3/Jenkinsfile
+++ b/m3/demo1/1.3/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             }
             steps {
                 echo "Bulding version: ${VERSION} with suffix: ${VERSION_SUFFIX}"
-                sh 'dotnet build '
+                sh 'dotnet build -p:VersionPrefix="${VERSION}" --version-suffix "${VERSION_SUFFIX}" ./m3/src/Pi.Web/Pi.Web.csproj'
             }
         }
         stage('Unit Test') {
