updated publish root

--- a/m3/demo1/1.3/Jenkinsfile
+++ b/m3/demo1/1.3/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
                 expression { return params.RC }
             }
             steps {
-                sh 'dotnet publish -p:VersionPrefix=${VERSION} --version-suffix "${VERSION_RC}" ./m3/src/Pi.Web.csproj -o ./out'
+                sh 'dotnet publish -p:VersionPrefix=${VERSION} --version-suffix "${VERSION_RC}" ./m3/src/Pi.Web/Pi.Web.csproj -o ./out'
                 archiveArtifacts('out/')
             }
         }
