--- a/m3/demo2/2.3/Jenkinsfile
+++ b/m3/demo2/2.3/Jenkinsfile
@@ -3,7 +3,7 @@ library identifier: 'jenkins-pipeline-demo-library@main',
 
 pipeline {
     agent any
-    paremeters {
+    parameters {
         booleanParam(name: 'RC', defaultValue: false, description: 'Is this a Release Candidate?')
     }
     environment {
