--- a/m4/demo1/1.1/Jenkinsfile
+++ b/m4/demo1/1.1/Jenkinsfile
@@ -8,8 +8,8 @@ pipeline {
         stage('Verify') {
             steps {
                 sh '''
-                    dotnet --list-sdks
-                    dotnet --list-runtimes
+                  dotnet --list-sdks
+                  dotnet --list-runtimes
                 '''
                 sh 'printenv'
                 sh 'ls -l "$WORKSPACE"'
@@ -22,17 +22,17 @@ pipeline {
         }
         stage('Unit Test') {
             steps {
-                dir("$WORKSPACE/m4/src") {
-                    sh '''
-                        dotnet test Pi.Math.Tests/Pi.Math.Tests.csproj
-                        dotnet test Pi.Runtime.Tests/Pi.Math.Tests.csproj
-                    '''
-                }
-            }  
+              dir("$WORKSPACE/m4/src") {
+                sh '''
+                    dotnet test Pi.Math.Tests/Pi.Math.Tests.csproj
+                    dotnet test Pi.Runtime.Tests/Pi.Runtime.Tests.csproj
+                '''
+              }
+            }
         }
         stage('Smoke Test') {
             steps {
-                sh 'dotnet "$WORKSPACE/m4/src/Pi.Web/bin/Debug/netcoreapp3.1/Pi.Web.dll"'
+              sh 'dotnet "$WORKSPACE/m4/src/Pi.Web/bin/Debug/netcoreapp3.1/Pi.Web.dll"'
             }
         }
     }
