--- a/m4/demo1/1.1/Jenkinsfile
+++ b/m4/demo1/1.1/Jenkinsfile
@@ -17,12 +17,12 @@ pipeline {
         }
         stage('Build') {
             steps {
-                sh 'dotnet build "$WORKSPACE/m4/src/Pi.Web/Pi.Web.csproj"'
+                sh 'dotnet build "$WORKSPACE_TMP/m4/src/Pi.Web/Pi.Web.csproj"'
             }
         }
         stage('Unit Test') {
             steps {
-              dir("$WORKSPACE/m4/src") {
+              dir("$WORKSPACE_TMP/m4/src") {
                 sh '''
                     dotnet test Pi.Math.Tests/Pi.Math.Tests.csproj
                     dotnet test Pi.Runtime.Tests/Pi.Runtime.Tests.csproj
